# sysinitd

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.adoc  README.md  cspell.config.yaml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: testing.yml
assets/examples/: service copy 2.yaml  service copy.yaml  service.yaml
assets/tests/services/dependencies/circle_big/: service_a.yaml  service_c.yaml
assets/tests/services/dependencies/circle_self/: circle_self.yaml
assets/tests/services/dependencies/circle_small/: service_b.yaml  service_c.yaml
assets/tests/services/non_unique/: service_a.yaml
code/: rust-toolchain.toml
src/: lib.rs  main.rs  serialize.rs
