[package]
name = "sysinitd"
version = "0.1.0"
edition = "2024"

description = "A supervisor daemon and initialization process for Linux"

[dependencies]
anyhow = { version = "1.0", default-features = false }

clap = { version = "4.5", default-features = false, features = [
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
  "env",
  "cargo",
] }
clap-verbosity-flag = { version = "3.0", default-features = false, features = [
  "tracing",
] }
clap_autocomplete = { version = "0.4", default-features = false }
humantime = "2.2.0"

serde = { version = "1.0", default-features = false, features = [
  "std",
  "derive",
] }
serde_yml = { version = "=0.0.12", default-features = false }

tokio = { version = "1.44", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "fmt",
  "smallvec",
  "std",
  "tracing-log",
] }
